# shreshth-rally-tracker

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: create-dmg.sh
src/: appState.ts  changeFetcher.ts  constants.ts  main.ts  notificationEngine.ts  rallyClient.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
