[package]
name = "rally-notifier"
version = "0.1.0"
description = "Local Rally story update notifier"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
keyring = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
